--- a/html_css/index.html
+++ b/html_css/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang='fr'>
+	<!-- 
+		CETTE PAGE CORRESPOND A LA PAGE D'ACCUEIL
+		Vous pouvez y trouver :
+			- La navbar
+			- Les 4 différentes cartes (voyages, qui est JJ, ...)
+			(- le logo SAVU)
+			- Le footer
+	-->
 	<head>
 		<title>Accueil</title>
 		<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -77,14 +85,14 @@
 		
 		 <!-- CARD 2 -->
 		 <div id="decalage_droit" class="col s12 m5 l5">
-			<h2 class="header">Voyages</h2>
+			<h2 class="header">Qui est JJ ?</h2>
 			<div class="card horizontal">
 			  <div class="card-image">
-				<img src="http://lorempixel.com/100/190/nature/6">
+				<img src="images/businessman.png">
 			  </div>
 			  <div class="card-stacked">
 				<div class="card-content">
-				  <p>Pays visit&eacute;s. France - Bingladesh (c'est la desh) - Angletterre - Afrique (c po 1 pays...) - Inde - Japon - Congo - Mongolie (je le suis devenu)</p>
+				  <p>Un mec trop cool. Un homme beau, riche, au multiples qualit&eacute;s, fin bref, pas besoin de vous faire un dessin... JJ est BATMAN.</p>
 				</div>
 				<div class="card-action">
 				  <a href="#">Voir la section</a>
@@ -143,6 +151,40 @@
 			</div>
 		</section>
 		
+		<!-- LE FOOTER-->
+	    <footer class="page-footer">
+     
+            <div class="row" id="decalage_gauche">
+              <div class="col l4 m6 s12">
+                <h5 class="white-text">Footer Content</h5>
+                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+              </div>
+			  <div class="col l4 m6 s12">
+                <h5 class="white-text">Footer Content</h5>
+                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+              </div>
+			  <div class="col l1"></div>
+			  <div class="col l2 s12">
+                <h5 class="white-text">Links</h5>
+                <ul>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                </ul>
+              </div>
+            </div>
+         
+          <div class="footer-copyright">
+            <div id="decalage_gauche">
+            © 2014 Copyright Text
+            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+          </div>
+        </footer>
+		
+		
+		<!-- Les insertions javascript de materialize + jQuerry-->
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 		<script type="text/javascript" src="js/materialize.js"></script>
 		<script type="text/javascript" src="js/materialize.min.js"></script>
