--- a/html_css/blog.html
+++ b/html_css/blog.html
@@ -41,7 +41,13 @@
 			
 			#image_1{
 				max-height: 190px;
-			}		   
+			}		
+
+			.page-footer{
+				position: absolute;
+				bottom: 0;
+				width: 100%;
+			}
 
       	</style>
 	</head>
@@ -65,94 +71,20 @@
 			</div>
 		</nav>
 		
-		<!-- LES 2 CARDS du HAUT -->
 		<div class="row">
-		
-		 <!-- CARD 1 -->
-		 <div id="decalage_gauche" class="col s12 m5 l5">
-			<h2 class="header">Voyages</h2>
-			<div class="card horizontal">
-			  <div class="card-image">
-				<img src="http://lorempixel.com/100/190/nature/6">
-			  </div>
-			  <div class="card-stacked">
-				<div class="card-content">
-				  <p>Pays visit&eacute;s. France - Bingladesh (c'est la desh) - Angletterre - Afrique (c po 1 pays...) - Inde - Japon - Congo - Mongolie (je le suis devenu)</p>
+			<div class="col s12 m6">
+			  <div class="card">
+				<div class="card-image">
+				  <img src="images/sample-1.jpg">
+				  <span class="card-title">Card Title</span>
+				  <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
 				</div>
-				<div class="card-action">
-				  <a href="#">Voir la section</a>
+				<div class="card-content">
+				  <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
 				</div>
 			  </div>
 			</div>
-		  </div>
-		
-		 <!-- CARD 2 -->
-		 <div id="decalage_droit" class="col s12 m5 l5">
-			<h2 class="header">Qui est JJ ?</h2>
-			<div class="card horizontal">
-			  <div class="card-image">
-				<img id="image_1" src="images/businessman.png">
-			  </div>
-			  <div class="card-stacked">
-				<div class="card-content">
-				  <p>Un mec trop cool. Un homme beau, riche, au multiples qualit&eacute;s, fin bref, pas besoin de vous faire un dessin... JJ est BATMAN.</p>
-				</div>
-				<div class="card-action">
-				  <a href="#">Voir la section</a>
-				</div>
-			  </div>
-			</div>
-		  </div>
-		  
 		</div>
-		
-		<!-- LES 2 CARDS du BAS -->
-		<div class="row">
-		
-		 <!-- CARD 3 -->
-		 <div id="decalage_gauche" class="col s12 m5 l">
-			<h2 class="header">Voyages</h2>
-			<div class="card horizontal">
-			  <div class="card-image">
-				<img src="http://lorempixel.com/100/190/nature/6">
-			  </div>
-			  <div class="card-stacked">
-				<div class="card-content">
-				  <p>Pays visit&eacute;s. France - Bingladesh (c'est la desh) - Angletterre - Afrique (c po 1 pays...) - Inde - Japon - Congo - Mongolie (je le suis devenu)</p>
-				</div>
-				<div class="card-action">
-				  <a href="#">Voir la section</a>
-				</div>
-			  </div>
-			</div>
-		  </div>
-		
-		 <!-- CARD 4 -->
-		 <div id="decalage_droit" class="col s12 m5 l5">
-			<h2 class="header">Voyages</h2>
-			<div class="card horizontal">
-			  <div class="card-image">
-				<img src="http://lorempixel.com/100/190/nature/6">
-			  </div>
-			  <div class="card-stacked">
-				<div class="card-content">
-				  <p>Pays visit&eacute;s. France - Bingladesh (c'est la desh) - Angletterre - Afrique (c po 1 pays...) - Inde - Japon - Congo - Mongolie (je le suis devenu)</p>
-				</div>
-				<div class="card-action">
-				  <a href="#">Voir la section</a>
-				</div>
-			  </div>
-			</div>
-		  </div>
-		  
-		</div>
-		
-		<!-- LES LOGO SAVU qui est responsive -->
-		<section>
-			<div id="lolol">
-				<img id="lol" src="LOGO.png">
-			</div>
-		</section>
 		
 		<!-- LE FOOTER-->
 	    <footer class="page-footer">
@@ -173,7 +105,7 @@
                 <h5 class="white-text">Liens</h5>
                 <ul>
                   <li><a class="grey-text text-lighten-3" href="#!">A propos</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Blog</a></li>
+                  <li><a class="grey-text text-lighten-3" href="blog.html">Blog</a></li>
                   <li><a class="grey-text text-lighten-3" href="#!">Une id&eacute;e ?</a></li>
                   <li><a class="grey-text text-lighten-3" href="#!">Contactez moi</a></li>
                 </ul>
