--- a/html_css/blog.html
+++ b/html_css/blog.html
@@ -44,7 +44,7 @@
 			}		
 
 			.page-footer{
-				position: absolute;
+				position: relative;
 				bottom: 0;
 				width: 100%;
 			}
@@ -75,7 +75,48 @@
 			<div class="col s12 m6">
 			  <div class="card">
 				<div class="card-image">
-				  <img src="images/sample-1.jpg">
+				  <img src="images/arbre_1.jpg">
+				  <span class="card-title">Card Title</span>
+				  <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+				</div>
+				<div class="card-content">
+				  <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+				</div>
+			  </div>
+			</div>
+
+			<div class="col s12 m6">
+			  <div class="card">
+				<div class="card-image">
+				  <img src="images/arbre_1.jpg">
+				  <span class="card-title">Card Title</span>
+				  <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+				</div>
+				<div class="card-content">
+				  <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+				</div>
+			  </div>
+			</div>
+		</div>
+		
+		<div class="row">
+			<div class="col s12 m6">
+			  <div class="card">
+				<div class="card-image">
+				  <img src="images/arbre_1.jpg">
+				  <span class="card-title">Card Title</span>
+				  <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+				</div>
+				<div class="card-content">
+				  <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+				</div>
+			  </div>
+			</div>
+
+			<div class="col s12 m6">
+			  <div class="card">
+				<div class="card-image">
+				  <img src="images/arbre_1.jpg">
 				  <span class="card-title">Card Title</span>
 				  <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
 				</div>
@@ -88,7 +129,6 @@
 		
 		<!-- LE FOOTER-->
 	    <footer class="page-footer">
-     
             <div class="row" id="decalage_gauche">
               <div class="col l4 m6 s12">
                 <h5 class="white-text">Contact</h5>
@@ -98,7 +138,7 @@
 			  </div>
 			  <div class="col l4 m6 s12">
                 <h5 class="white-text">NOM DU SITE</h5>
-                <p class="grey-text text-lighten-4">Ce site a &eacute;t&eacute; r&eacute;alis&eacute; dans le but de montrer au grand public que les voyages dans le mondentier sont super chiants et qu'il vaut mieux rester chez moi, a+, JJ.</p>
+                <p class="grey-text text-lighten-4">Ce site a &eacute;t&eacute; r&eacute;alis&eacute; dans le but de montrer au grand public que les voyages dans le monde entier sont super chiants et qu'il vaut mieux rester chez soi, a+, JJ.</p>
               </div>
 			  <div class="col l2"></div>
 			  <div class="col l2 s12">
