--- a/html_css/index.html
+++ b/html_css/index.html
@@ -156,7 +156,6 @@
 		
 		<!-- LE FOOTER-->
 	    <footer class="page-footer">
-     
             <div class="row" id="decalage_gauche">
               <div class="col l4 m6 s12">
                 <h5 class="white-text">Contact</h5>
@@ -166,14 +165,14 @@
 			  </div>
 			  <div class="col l4 m6 s12">
                 <h5 class="white-text">NOM DU SITE</h5>
-                <p class="grey-text text-lighten-4">Ce site a &eacute;t&eacute; r&eacute;alis&eacute; dans le but de montrer au grand public que les voyages dans le mondentier sont super chiants et qu'il vaut mieux rester chez moi, a+, JJ.</p>
+                <p class="grey-text text-lighten-4">Ce site a &eacute;t&eacute; r&eacute;alis&eacute; dans le but de montrer au grand public que les voyages dans le monde entier sont super chiants et qu'il vaut mieux rester chez soi, a+, JJ.</p>
               </div>
 			  <div class="col l2"></div>
 			  <div class="col l2 s12">
                 <h5 class="white-text">Liens</h5>
                 <ul>
                   <li><a class="grey-text text-lighten-3" href="#!">A propos</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Blog</a></li>
+                  <li><a class="grey-text text-lighten-3" href="blog.html">Blog</a></li>
                   <li><a class="grey-text text-lighten-3" href="#!">Une id&eacute;e ?</a></li>
                   <li><a class="grey-text text-lighten-3" href="#!">Contactez moi</a></li>
                 </ul>
